--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 			<artifactId>spring-context</artifactId>
 			<version>3.2.3.RELEASE</version>
 		</dependency>
+		<dependency>
+<groupId>org.aspectj</groupId>
+<artifactId>aspectjweaver</artifactId>
+<version>1.7.2</version>
+</dependency>
 		
 		<dependency>
 			<groupId>org.slf4j</groupId>
