--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			<version>6.8.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>1.7.1</version>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
   
   <build>
